; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libkern/net/extr_inet_ntop.c_inet_ntop.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libkern/net/extr_inet_ntop.c_inet_ntop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @inet_ntop(i32 %0, i8* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %10 = load i32, i32* %6, align 4
  switch i32 %10, label %21 [
    i32 129, label %11
    i32 128, label %16
  ]

11:                                               ; preds = %4
  %12 = load i8*, i8** %7, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = load i32, i32* %9, align 4
  %15 = call i8* @inet_ntop4(i8* %12, i8* %13, i32 %14)
  store i8* %15, i8** %5, align 8
  br label %22

16:                                               ; preds = %4
  %17 = load i8*, i8** %7, align 8
  %18 = load i8*, i8** %8, align 8
  %19 = load i32, i32* %9, align 4
  %20 = call i8* @inet_ntop6(i8* %17, i8* %18, i32 %19)
  store i8* %20, i8** %5, align 8
  br label %22

21:                                               ; preds = %4
  store i8* null, i8** %5, align 8
  br label %22

22:                                               ; preds = %21, %16, %11
  %23 = load i8*, i8** %5, align 8
  ret i8* %23
}

declare dso_local i8* @inet_ntop4(i8*, i8*, i32) #1

declare dso_local i8* @inet_ntop6(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
